--- a/Components/Pages/Ventas/ListadoPedidos.razor
+++ b/Components/Pages/Ventas/ListadoPedidos.razor
@@ -1,11 +1,6 @@
 ﻿@page "/Ventas/Listados"
 @layout MainLayout
 @attribute [Authorize]
-@inject LoadingService LoadingService
-@inject HttpClient HttpClient
-@inject IUtilities Utilities
-@inject INotificationService NotificationService
-
 
 <CustomView Roles="pedidos">
     <MudContainer MaxWidth="MaxWidth.ExtraExtraLarge" Class="pa-4 d-flex flex-column" Style="height: 100%; overflow: hidden;">
@@ -34,7 +29,7 @@
                     <MudIconButton Style="height:fit-content" Color="Color.Primary" Disabled="@LoadingService.IsLoading" Variant="Variant.Filled" OnClick="ReloadTable" Icon="@Icons.Material.Filled.Search" />
                 </MudItem>
                 <MudItem xs="4" sm="1" md="1" Class="d-flex align-center">
-                    <MudIconButton Style="height:fit-content" Disabled="@LoadingService.IsLoading" Variant="Variant.Filled" Color="Color.Primary" Icon="@Icons.Material.Filled.Add" />
+                    <MudIconButton Style="height:fit-content" Disabled="@LoadingService.IsLoading" Variant="Variant.Filled" Color="Color.Primary" Icon="@Icons.Material.Filled.Add" OnClick="Error" />
                 </MudItem>
             </MudGrid>
         </MudPaper>
@@ -148,6 +143,10 @@
             return new TableData<PedidoDTO>() { TotalItems = 0, Items = new List<PedidoDTO>() };
         }        
     }
+    private void Error()
+    {
+        NotificationService.ShowError("Error de prueba");
+    }
 
     private async Task LoadTipoArticulos()
     {
@@ -163,12 +162,12 @@
                 }
                 else
                 {
-                    NotificationService.ShowError("Error al cargar tipos de artículos.", descripcion: response.ReasonPhrase ?? "Error desconocido.");
+                    NotificationService.ShowError($"Error al cargar tipos de artículos: {response.ReasonPhrase}");
                 }
             }
             catch (Exception ex)
             {
-                NotificationService.ShowError("Error cargando tipos de artículos.", descripcion: ex.Message);
+                NotificationService.ShowError($"Error cargando tipos de artículos: {ex.Message}");
             }
         }
     }
