--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -21,4 +21,9 @@
 @using CCC_Rugby_Web.Security
 @using CCC_Rugby_Web.Components.Layout
 @using CCC_Rugby_Web.Components.Utils
-@using static CCC_Rugby_Web.Services.Constants
+@using static CCC_Rugby_Web.Services.Constants;
+@inject HttpClient HttpClient
+@inject IUtilities Utilities
+@inject ILoadingService LoadingService
+@inject INotificationService NotificationService
+@inject ISnackbar Snackbar
